# Artist_Trend_Analysis

./: README.md  main.py  pyproject.toml  runtime_check.py
album_module/: circle_chart_api.py  last_fm_api.py  musicbrainz_api.py
eda/: circle_chart.py  google_trend_eda.ipynb  naver_trend_eda.ipynb  trend_decompose.ipynb
modeling/: trend_prediction.ipynb  trend_prediction_DL.ipynb  trend_prediction_ML.ipynb
trend_module/: google_trend.py  google_trend_selenium.py  naver_trend.py
