[tool.poetry]
name = "thesis-prj"
version = "0.1.0"
description = ""
authors = ["lucio <syy2585@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
google-api-core = "^2.19.1"
pylast = "^5.3.0"
auto-tqdm = "^1.0.3"
pytrends = "^4.9.2"
google-api-python-client = "^2.134.0"
google-auth = "^2.30.0"
google-auth-oauthlib = "^1.2.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
ipykernel = "^6.29.4"
musicbrainzngs = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
